--- a/bai3/task3.html
+++ b/bai3/task3.html
@@ -12,6 +12,7 @@
         width: 700px;
         height: 700px;
         padding: 30px;
+        overflow: auto;
     }
     .sub2{
         display: flex;
